--- a/client/.env.example
+++ b/client/.env.example
@@ -8,3 +8,6 @@ VITE_CLERK_PUBLISHABLE_KEY=pk_test_your_publishable_key_here
 
 # Optional: Environment
 # VITE_ENV=development
+# OpenAI API Key for Study Coach
+# Get your API key from: https://platform.openai.com/api-keys
+VITE_OPENAI_API_KEY=your_openai_api_key_here
