--- a/client/.env.example
+++ b/client/.env.example
@@ -3,11 +3,7 @@
 # Go to your application → API Keys → Publishable Key
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_your_publishable_key_here
 
-# Optional: Backend API URL (for when you add a backend)
-# VITE_API_URL=http://localhost:3000/api
-
-# Optional: Environment
-# VITE_ENV=development
-# OpenAI API Key for Study Coach
-# Get your API key from: https://platform.openai.com/api-keys
-VITE_OPENAI_API_KEY=your_openai_api_key_here
+# Backend API URL
+# For local development: http://localhost:3000
+# For production: your backend server URL
+VITE_API_URL=http://localhost:3000
